# morfeus

./: CMakeLists.txt
examples/cube/: cube.1.edge  cube.1.ele  cube.1.face  cube.1.node  cube.1.vtk  cube.smesh  temp.pvd
src/: CMakeLists.txt  morfeus.h  types.h
src/conditions/: boundarycondition.cpp  boundarycondition.h  perfectelectricconductor.cpp  perfectelectricconductor.h
src/core/: factory.h  morfeusobject.cpp  morfeusobject.h  morfeusproject.cpp  morfeusproject.h
src/excitations/: excitation.cpp  excitation.h  planewave.cpp  planewave.h  probefeed.cpp  probefeed.h
src/geometry/: box.cpp  box.h  circle.cpp  circle.h  cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  ellipse.cpp  ellipse.h  face.cpp  face.h  geometry.cpp  geometry.h  hole.cpp  hole.h  model.cpp  model.h  part.cpp  part.h  plane.cpp  plane.h  point.cpp  point.h  point2d.cpp  point2d.h  point3d.cpp  point3d.h  polygon.cpp  polygon.h  polygonshape.cpp  polygonshape.h  rectangle.cpp  rectangle.h  region.cpp  region.h  segment.cpp  segment.h  shape.cpp  shape.h  (+9 more)
src/material/: isotropicmaterial.cpp  isotropicmaterial.h  material.cpp  material.h  materialdatabase.cpp  materialdatabase.h
src/math/: constants.h  functions.cpp  functions.h  gaussquad.cpp  gaussquad.h  matrix3x3.cpp  matrix3x3.h  sparsematrix.cpp  sparsematrix.h  types.h
src/media/: dielectricmedium.cpp  dielectricmedium.h  medialibrary.cpp  medialibrary.h  medium.cpp  medium.h  perfectelectricconductor.cpp  perfectelectricconductor.h
src/mesh/: convexhull.cpp  convexhull.h  edge.cpp  edge.h  element.cpp  element.h  face.cpp  face.h  mesh.cpp  mesh.h  node.cpp  node.h  prism.cpp  prism.h  prismelement.cpp  prismelement.h  rectangle.cpp  rectangle.h  rectangleface.cpp  rectangleface.h  tetelement.cpp  tetelement.h  tetrahedron.cpp  tetrahedron.h  triangle.cpp  triangle.h  triangleelement.cpp  triangleelement.h  triangleface.cpp  triangleface.h
src/mesher/: mesher.cpp  mesher.h  mesherfacet.cpp  mesherfacet.h  mesherpolygon.cpp  mesherpolygon.h  meshrefinement.cpp  meshrefinement.h  trimesh.c
src/model/: model.cpp  model.h
src/model/geometry/: cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  ellipse.cpp  ellipse.h  face.cpp  face.h  facet.cpp  facet.h  hole.cpp  hole.h  line.cpp  line.h  part.cpp  part.h  point.cpp  point.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  region.cpp  region.h  segment.cpp  segment.h  vertex.cpp  vertex.h  wire.cpp  wire.h
src/model/media/: dielectric.cpp  dielectric.h  freespace.cpp  freespace.h  medialibrary.cpp  medialibrary.h  medium.cpp  medium.h  perfectelectricconductor.cpp  perfectelectricconductor.h
src/model/ports/: port.cpp  port.h  wireport.cpp  wireport.h
src/observations/: farfield.cpp  farfield.h  observation.cpp  observation.h
src/old/: morfeus.h  morfeus.pro  types.h
src/old/excitation/: excitation.cpp  excitation.h  planewave.cpp  planewave.h  probefeed.cpp  probefeed.h
src/old/material/: isotropicmaterial.cpp  isotropicmaterial.h  material.cpp  material.h
src/old/math/: constants.h  functions.cpp  functions.h  gaussquad.h  guassquad.cpp  iterativesolver.cpp  iterativesolver.h  matrixvectormultiply.h  sparsematrix.h  uppertriangularmatrix.h  vector.h
src/old/mesh/: edge.cpp  edge.h  element.cpp  element.h  face.cpp  face.h  hexahedral.cpp  hexahedral.h  layer.cpp  layer.h  mesh.cpp  mesh.h  mesher.cpp  mesher.h  meshproperties.cpp  meshproperties.h  meshsection.cpp  meshsection.h  node.cpp  node.h  prism.cpp  prism.h  quadrilateral.cpp  quadrilateral.h  surfacemesh.cpp  surfacemesh.h  triangle.cpp  triangle.h
src/old/observation/: farfields.cpp  farfields.h  inputimpedance.cpp  inputimpedance.h  observation.cpp  observation.h  sparameters.cpp  sparameters.h
src/old/solver/: iterativesolution.cpp  iterativesolution.h  solution.cpp  solution.h
src/project/: morfeusproject.cpp  morfeusproject.h
src/rapidxml/: rapidxml_print.hpp  xmlutils.h
src/solution/: directsolver.cpp  directsolver.h  iterativesolver.cpp  iterativesolver.h  meshinformation.cpp  meshinformation.h  solution.cpp  solution.h  solver.cpp  solver.h
src/solver/: bicgsolver.cpp  bicgsolver.h  directsolver.cpp  directsolver.h  iterativesolution.cpp  iterativesolution.h  iterativesolver.cpp  iterativesolver.h  solution.cpp  solution.h  solver.cpp  solver.h
src/sources/: planewave.cpp  planewave.h  source.cpp  source.h  voltagesource.cpp  voltagesource.h
src/xml/: xmlutils.h
tools/: CMakeLists.txt
tools/morfeus_console/: CMakeLists.txt  application.cpp  application.h  commandline.h  consoleproject.cpp  consoleproject.h  inputdata.cpp  inputdata.h  main.cpp
tools/morfeus_gui/: CMakeLists.txt  main.cpp
tools/morfeus_gui/application/: application.cpp  application.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/morfeus_gui/commands/: addrectanglecommand.cpp  addrectanglecommand.h  renamecommand.cpp  renamecommand.h
tools/morfeus_gui/dialogs/: cubedialog.cpp  cubedialog.h  cubedialog.ui  cylinderdialog.cpp  cylinderdialog.h  cylinderdialog.ui
tools/morfeus_gui/lib/qtep/: CMakeLists.txt
tools/morfeus_gui/lib/qtep/src/: CMakeLists.txt
tools/morfeus_gui/lib/qtep/src/core/: project.cpp  project.h
tools/morfeus_gui/project/: guiproject.cpp  guiproject.h  meshitem.cpp  meshitem.h  rectangleitem.cpp  rectangleitem.h  surfaceitem.cpp  surfaceitem.h
tools/morfeus_gui/resources/: resources.qrc
tools/morfeus_gui/views/: detailsview.cpp  detailsview.h  view3d.cpp  view3d.h  workspaceview.cpp  workspaceview.h
tools/morfeus_gui/workspacemodel/: cubeitem.cpp  cubeitem.h  excitationsworkspaceitem.cpp  excitationsworkspaceitem.h  geometrygroup.cpp  geometrygroup.h  geometryworkspaceitem.cpp  geometryworkspaceitem.h  meshworkspaceitem.cpp  meshworkspaceitem.h  modelgroup.cpp  modelgroup.h  observationsworkspaceitem.cpp  observationsworkspaceitem.h  partitem.cpp  partitem.h  rectangleworkspaceitem.cpp  rectangleworkspaceitem.h  workspacemodel.cpp  workspacemodel.h  workspacemodelitem.cpp  workspacemodelitem.h
tools/morfeus_gui/workspaceview/: workspaceview.cpp
(+6 files in other folders)
